Litter spacing fixed

--- a/css/about.css
+++ b/css/about.css
@@ -35,10 +35,12 @@
     -moz-background-clip: text;
     background-clip: text;
     /* stylelint-enable */
-    letter-spacing: 5px;
+    letter-spacing: 0px;
     font-weight: 900;
     color: transparent;
+    width: 80%;
     font-size: 24px;
+    text-align: center;
   }
 
   .addr p {
@@ -110,7 +112,7 @@
     background-clip: text;
     /* stylelint-enable */
     color: transparent;
-    letter-spacing: 1px;
+    letter-spacing: 0px;
     font-weight: 900;
     font-size: 50px;
     margin-top: -10px;
